--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -35,7 +35,24 @@
       <widget class="QWidget" name="gridLayoutWidget">
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QScrollArea" name="scrollArea">
+         <widget class="QScrollArea" name="contentFull">
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="scrollAreaWidgetContents">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>607</width>
+             <height>188</height>
+            </rect>
+           </property>
+          </widget>
+         </widget>
+        </item>
+        <item>
+         <widget class="QScrollArea" name="contentThumbs">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>1</horstretch>
@@ -54,9 +71,10 @@
              <x>0</x>
              <y>0</y>
              <width>607</width>
-             <height>384</height>
+             <height>188</height>
             </rect>
            </property>
+           <zorder>contentFull</zorder>
           </widget>
          </widget>
         </item>
